syntax = "proto3";
package pb;
import "game_code.proto";

// 商城
message CBuy
{
    uint32 id   = 1;//购买ID
}

message SBuy
{
    uint32 result = 1; //0购买成功,1失败
    ErrCode error  = 2; //错误码
}

// 微信支付 - 下单
message CWxpayOrder
{
    uint32 id   = 1; //购买商品ID
    string body = 2; //购买商品描述
}

message SWxpayOrder
{
    uint32 id      = 1; // 购买商品ID
    string payreq  = 2; // 调起支付接口请求参数
    string orderid = 3; // 订单号
    ErrCode error   = 4; // 错误码
}

// 微信支付 - 查询
message CWxpayQuery
{
    string transid  = 1;//微信订单号
}

message SWxpayQuery
{
    string orderid = 1;// 订单号
    uint32 result  = 2;// 0支付成功,1发货中,2订单号不存在,3支付失败
    ErrCode error   = 3;// 错误码
}

//  苹果支付
message CApplePay
{
    uint32 id      = 1; //购买商品ID
    string receipt = 2; //客户端提交上来的苹果支付验证数据
}

message SApplePay
{
    uint32 id      = 1;//购买商品ID
    ErrCode error   = 2;//错误码
}

// 商城
message CShop
{
}

message SShop
{
    repeated Shop   list   = 1; //商品列表
    ErrCode error  = 2; //错误码
}

// 商品
message Shop
{
    uint32 id     = 1; //购买ID
    uint32 status = 2; //物品状态,1=热卖
    uint32 propid = 3; //兑换的物品,1=钻石
    uint32 payway = 4; //支付方式,1=RMB
    uint32 number = 5; //兑换的数量
    uint32 price  = 6; //支付价格(单位元)
    string name   = 7; //物品名称
    string info   = 8; //物品信息
}

// jtpay支付 - 下单
message CJtpayOrder
{
    uint32 id   = 1; //购买商品ID
    string body = 2; //购买商品描述
}

message SJtpayOrder
{
    uint32 id      = 1; // 购买商品ID
    string payreq  = 2; // 调起支付接口post请求参数
    string orderid = 3; // 订单号
    ErrCode error   = 4; // 错误码
}
